# ESP-32

./: .cproject  .project  40ByteFingerprintTo20BytePufresp.stc  README.md  Thumbs.db  ble_proctol  experiment.md  header.xml  lblock_key.md  pathsAndSymbols.xml  performance.docx  runpy.sh  sdkconfig  sdkconfig.old  wrist_makefile.code-workspace
SZM301/5. 例程/: fingerprint测试例程 Open103Z.rar  mega8单片机.rar
components/emd_proctol/: Kconfig.projbuild  iic.c
components/ic_driver/: Kconfig.projbuild  authenticate.c  bmi160.c  fpga.c  gatts_table.c  ls013b7dh03.c  max17048.c  max30102.c  max77752.c  rgb_led.c  szm301.c  taskDoubleFactorAuthenticate.c
components/util/: Kconfig.projbuild  algorithm.c  unityString.c
main/: CMakeLists.txt  algorithm.h  authenticate.c  authenticate.h  bmi160.c  bmi160.h  bmi160_defs.h  delay.c  delay.h  experiment.c  experiment.h  fpga.c  fpga.h  freertosTest.c  freertosTest.h  gatts_table.c  gatts_table.h  iic.c  iic.h  ls013b7dh03.c  ls013b7dh03.h  main.c  max30003.c  max30003.h  max30102.c  max30205.c  oled_font.h  server.c  server.h  szm301.c  szm301.h  taskDoubleFactorAuthenticate.c  taskDoubleFactorAuthenticate.h  task_sensor.h  task_sensors.c  uart.c  uart_echo_example_main.c  util.c  util.h
main/emd_proctol/: iic.c  iic.h  spi.c  spi.h  uart.c  uart.h
main/ic_driver/: bmi160.c  bmi160.h  is25lp256d.c  ls013b7dh03.c  max17048.c  max17048.h  max30102.c  max30102.h  max30205.c  max30205.h  max77752.c  max77752.h  puf.c  puf.h  rgb_led.c  rgb_led.h
main/util/: algorithm.c  algorithm.h
matplot/: main.py
(+84 files in other folders)
