
idf_component_register(SRCS "main.c"  "algorithm.c" "fpga.c"				"is25lp256d.c"			"max30003.c"			"rgb_led.c"			"task_sensors.c"
"authenticate.c"			"freertosTest.c"			"ls013b7dh03.c"			"max30102.c"			"spi.c"				"uart.c"
"bmi160.c"			"gatts_table.c"			"main.c"				"max30205.c"			"szm301.c"			"unityString.c"
"delay.c"				"iic.c"				"max17048.c"			"max77752.c"			"taskDoubleFactorAuthenticate.c"	"util.c"  "experiment.c"
                    INCLUDE_DIRS ".")




